--- a/project-skilled/styles.css
+++ b/project-skilled/styles.css
@@ -29,8 +29,13 @@ body {
 }
 
 nav {
+  width: 100%;
+}
+
+.navbar {
   padding: 2.4rem 16.4rem;
   width: 100%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -42,7 +47,7 @@ nav img {
 
 .btn-nav {
   height: 5.6rem;
-  width: 16.7rem;
+  min-width: 16.7rem;
   background-color: var(--color2-dark-blue);
   color: var(--color6-white);
   border: none;
@@ -57,14 +62,14 @@ nav img {
 }
 
 .top-section {
-  padding: 0 16.4rem 0 16.4rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  padding: 0 16.4rem 3rem 16.4rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .maximize {
-  width: 45.7rem;
-  height: 35.9rem;
+  max-width: 45.7rem;
+  max-height: 35.9rem;
   margin-top: 17.2rem;
   margin-bottom: 22.6rem;
 }
@@ -103,52 +108,65 @@ nav img {
 
 .maximize button:hover {
   cursor: pointer;
-  background: linear-gradient(
-      0deg,
-      #ffffff80,
-      #ffffff80
-    ),
-    linear-gradient(180deg, var(--color2-gradient-orange) 0%, var(--color1-gradient-pink) 100%);
+  background: linear-gradient(0deg, #ffffff80, #ffffff80),
+    linear-gradient(
+      180deg,
+      var(--color2-gradient-orange) 0%,
+      var(--color1-gradient-pink) 100%
+    );
 }
 
 .image img {
-  height: 94rem;
-  /* width: 99.163rem; */
+  height: 86rem;
+  width: 75.6rem;
   position: absolute;
   top: -100px;
-  right: -280px;
+  right: 0;
   z-index: -1;
+  object-fit: cover;
+  object-position: 50px 5px;
+  zoom: 1.1;
 }
 
 .bottom-section {
   padding: 2.4rem 16.4rem 12rem 16.4rem;
   height: 50%;
+  width: 100%;
+  margin: auto;
+
+  background: linear-gradient( 180deg, 
+    var(--color6-white) 0%,
+    var(--color4-gradient-blue) 30%
+  );
+}
+
+.cards-container {
+  width: auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  gap: 3rem;
-  background: linear-gradient(
-    var(--color6-white) 0%,
-    var(--color4-gradient-blue) 100%
-  );
-  /* background-color: black; */
+  justify-content: space-around;
+
 }
 
 .card {
-  width: 35rem;
-  height: 32.2rem;
+  min-width: 35rem;
+  min-height: 32.2rem;
+  max-width: 35rem;
+  max-height: 32.2rem;
   border: none;
+  margin: 1.5rem;
+  margin-bottom: 6rem;
   border-radius: 1.5rem;
-  padding: 6.4rem 3.2rem 4rem 3.2rem;
+  padding: 0 3.2rem 4rem 3.2rem;
 }
 
 .icon {
-  position: absolute;
-  bottom: -150px;
+  position: relative;
+  top: -30px;
 }
 
 .first-card {
+  padding: 6.4rem 3.2rem 4rem 3.2rem;
   background: linear-gradient(
     var(--color2-gradient-orange),
     var(--color1-gradient-pink)
@@ -188,4 +206,99 @@ nav img {
   color: var(--color1-gradient-pink);
   border: none;
   background: transparent;
+}
+
+.course-card button:hover {
+  cursor: pointer;
+  color: var(--color5-light-pink);
+}
+
+footer {
+  padding: 0 16.4rem;
+  width: 100%;
+  height: 12rem;
+  background-color: var(--color2-dark-blue);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn-footer {
+  height: 5.6rem;
+  min-width: 16.7rem;
+  background: linear-gradient(
+    var(--color3-gradient-purple) -54.32%,
+    var(--color1-gradient-pink)
+  );
+  color: var(--color6-white);
+  border: none;
+  border-radius: 2.8rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+}
+
+.btn-footer:hover {
+  cursor: pointer;
+  background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    linear-gradient(
+      180deg,
+      var(--color3-gradient-purple) -54.32%,
+      var(--color1-gradient-pink) 100%
+    );
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* iPad Air 820 x 1180  */
+
+@media (max-width: 820px) {
+  .navbar {
+    padding: 2.4rem 4.0rem;
+  }
+
+  .top-section {
+    padding: 0 4.0rem 3rem 4.0rem;
+  }
+
+  .maximize {
+    max-width: 39.8rem;
+    max-height: 28.4rem;
+  }
+  
+  .maximize h1 {
+    font-size: 4rem;
+    line-height: 5.04rem;
+    margin-bottom: 2.5rem;
+  }
+  
+  .maximize p {
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    margin-bottom: 2.4rem;
+  }
+  
+  .maximize button {
+    width: 16.7rem;
+    height: 5.6rem;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+  }
+
+  .image img {
+    height: 86rem;
+    width: 75.6rem;
+    position: absolute;
+    top: -100px;
+    right: 0;
+    z-index: -1;
+    object-fit: cover;
+    object-position: 50px 5px;
+    zoom: 1.1;
+  }
 }
