--- a/project-skilled/styles.css
+++ b/project-skilled/styles.css
@@ -133,8 +133,8 @@ nav img {
   height: 50%;
   width: 100%;
   margin: auto;
-
-  background: linear-gradient( 180deg, 
+  background: linear-gradient(
+    180deg,
     var(--color6-white) 0%,
     var(--color4-gradient-blue) 30%
   );
@@ -145,7 +145,6 @@ nav img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-
 }
 
 .card {
@@ -259,30 +258,30 @@ footer {
 
 @media (max-width: 820px) {
   .navbar {
-    padding: 2.4rem 4.0rem;
+    padding: 2.4rem 4rem;
   }
 
   .top-section {
-    padding: 0 4.0rem 3rem 4.0rem;
+    padding: 0 4rem 3rem 4rem;
   }
 
   .maximize {
     max-width: 39.8rem;
     max-height: 28.4rem;
   }
-  
+
   .maximize h1 {
     font-size: 4rem;
     line-height: 5.04rem;
     margin-bottom: 2.5rem;
   }
-  
+
   .maximize p {
     font-size: 1.6rem;
     line-height: 2.6rem;
     margin-bottom: 2.4rem;
   }
-  
+
   .maximize button {
     width: 16.7rem;
     height: 5.6rem;
@@ -292,13 +291,124 @@ footer {
 
   .image img {
     height: 86rem;
-    width: 75.6rem;
-    position: absolute;
-    top: -100px;
-    right: 0;
-    z-index: -1;
-    object-fit: cover;
-    object-position: 50px 5px;
-    zoom: 1.1;
+    width: 52rem;
+    zoom: 0;
+  }
+
+  .bottom-section {
+    padding: 2.4rem 4rem 7rem 4rem;
+  }
+
+  .card {
+    min-width: 33.9rem;
+    min-height: 25.9rem;
+    max-width: 33.9rem;
+    max-height: 25.9rem;
+    padding: 0 2rem 4rem 3.2rem;
+  }
+
+  .first-card h2 {
+    font-size: 2.4rem;
+    line-height: 3.2rem;
+    padding-top: 5rem;
+  }
+
+  .course-card h3 {
+    font-size: 2rem;
+    line-height: 2.52rem;
+    margin-bottom: 1.6rem;
+  }
+
+  .course-card p {
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    margin-bottom: 2.4rem;
+  }
+
+  .course-card button {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+    font-weight: 700;
+    color: var(--color1-gradient-pink);
+    border: none;
+    background: transparent;
+  }
+
+  footer {
+    padding: 0 3.5rem;
+  }
+}
+
+/* iPhone 11 Pro Max / XR 414 x 896  */
+
+@media (max-width: 414px) {
+  .navbar {
+    padding: 1.6rem;
+  }
+
+  .top-section {
+    padding: 0 1.6rem;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .maximize {
+    max-width: 34.3rem;
+    max-height: 10.1rem;
+    margin-top: 3.2rem;
+    margin-bottom: 22rem;
+  }
+
+  .maximize h1 {
+    font-size: 4rem;
+    line-height: 5.04rem;
+    margin-bottom: 2.6rem;
+  }
+
+  .maximize p {
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    margin-bottom: 2.4rem;
+  }
+
+  .maximize button {
+    width: 16.7rem;
+    height: 5.6rem;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+  }
+
+  .image img {
+    position: unset;
+    height: 100%;
+    width: 39rem;
+    object-position: unset;
+    z-index: unset;
+  }
+
+  .bottom-section {
+    padding: 0 1.6rem 4rem 1.6rem;
+  }
+
+  .card {
+    min-width: 33.9rem;
+    min-height: 25.9rem;
+    max-width: 33.9rem;
+    max-height: 25.9rem;
+    padding: 0 2rem 4rem 3.2rem;
+  }
+
+  .first-card  {
+    min-height: 12rem;
+    max-height: 12rem;
+  }
+
+  .first-card h2 {
+    padding-top: 2.4rem;
+  }
+
+  footer {
+    padding: 0 1.6rem;
   }
 }
