:lipstick: small update on margin

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ nav img {
 .maximize {
   max-width: 45.7rem;
   max-height: 35.9rem;
-  margin-top: 17.2rem;
+  margin-top: 14.8rem;
   margin-bottom: 22.6rem;
 }
 
@@ -118,19 +118,18 @@ nav img {
 
 .image img {
   height: 86rem;
-  width: 75.6rem;
+  width: 68rem;
   position: absolute;
-  top: -100px;
-  right: 0;
+  top: -160px;
+  right: 0px;
   z-index: -1;
   object-fit: cover;
   object-position: 50px 5px;
-  zoom: 1.1;
+  zoom: 1.15;
 }
 
 .bottom-section {
-  padding: 2.4rem 16.4rem 12rem 16.4rem;
-  height: 50%;
+  padding: 2.4rem 16.4rem 14rem 16.4rem;
   width: 100%;
   margin: auto;
   background: linear-gradient(
@@ -141,7 +140,6 @@ nav img {
 }
 
 .cards-container {
-  width: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -153,8 +151,6 @@ nav img {
   max-width: 35rem;
   max-height: 32.2rem;
   border: none;
-  margin: 1rem;
-  margin-bottom: 6rem;
   border-radius: 1.5rem;
   padding: 0 3.2rem 4rem 3.2rem;
   display: grid;
@@ -173,6 +169,7 @@ nav img {
     var(--color2-gradient-orange),
     var(--color1-gradient-pink)
   );
+  margin-bottom: 8rem;
 }
 
 .first-card h2 {
@@ -308,6 +305,10 @@ footer {
     max-width: 33.9rem;
     max-height: 25.9rem;
     padding: 0 2rem 4rem 3.2rem;
+  }
+
+  .course-card {
+    margin-bottom: 7rem;
   }
 
   .first-card h2 {
